tests/baselines/reference/parserMemberAccessorDeclaration6.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration6.ts(2,7): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration6.ts (1 errors) ====
    class C {
      set 0(i) { }
          ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    }